# VoiceFlow

./: .env.example  .gitignore  CLAUDE.md  Claudia_es_windows_v4_0_0.ppn  README.md  blob.js  bootstrap.py  claude_trigger_vscode.py  cli.py  commands_builtin.py  index.html  install-deps.sh  main.py  pyproject.toml  requirements-picovoice.txt  requirements.txt
.claude/: settings.local.json
.claude/hooks/: notification_hook.py  permission_request_hook.py  (+1 more)
audio/: feedback.py
claude-pty-wrapper/: README.md  package-lock.json  package.json
config/: aliases.py  default.json  settings.py
core/: action_executor.py  actions.py  command_watcher.py  commands.py  constants.py  custom_commands.py  engine.py  event_server.py  hybrid_engine.py  logger.py  notification_manager.py  oww_engine.py  picovoice_engine.py  pushover_client.py  state.py  transcript_watcher.py
docs/: IMPROVEMENT_PLAN.md  TAILSCALE_SETUP.md
legacy/: claude_trigger_dual.py
logs/: usage.json
scripts/: claude_hook.py  inspect_elevenlabs.py  test_dedup.py  test_dedup_unit.py  test_tailscale.py
tests/: __init__.py  conftest.py  test_action_context.py  test_client.py  test_command_registry.py  test_command_watcher.py  test_commands.py  test_config_new.py  test_daemon.py  test_listen.py  test_notification_manager.py  test_protocol.py  test_queue.py  test_state.py  test_tts.py  test_tts_engines.py
trainWakeWords/: split_wake_words.py
ui/: capture_overlay.py  easing.py  notification_panel.py  overlay.py  overlay_animator.py  overlay_debug.py  overlay_renderer.py  ui_Merged.txt
vosk/: vosk_simple.py
(+76 files in other folders)
